# cm

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  acinclude.m4  configure.ac
data/: Makefile.am
data/af/: Makefile.am
data/df/: Makefile.am
data/mf/: Makefile.am
doc/: cm.texi  version.texi
lib/: Makefile.am  class.c  classgroup.c  cm-impl.h  cm.h  cm_class-impl.h  curve.c  ecpp.c  fem.c  file.c  flint.c  get_version.c  jmodp.c  modclass.c  modpol.c  modular.c  mpi.c  mpzx.c  nt.c  param.c  pari-ecpp.c  pari.c  qdev.c  timer.c
lib/class/: Makefile.am  class.c  classgroup.c  cm_class-impl.h  cm_class.h  curve.c  modclass.c  mpzx.c  ntl.cc  pari.c
lib/common/: Makefile.am  cm_arith.h  cm_common-impl.h  cm_common.h  fem.c  file.c  modpol.c  modular.c  mpc_compl.c  nt.c  qdev.c  timer.c
lib/mpfp/: Makefile.am  mpfp-impl.h  mpfp.c  mpfp.h
lib/mpfpx/: Makefile.am  mpfp.c  mpfpx-impl.h  mpfpx.c  mpfpx.h
m4/: cm.m4
src/: Makefile.am  classpol.c  classpol.cc  cm.c  cm.cc  cm.h  ecpp-mpi.c  ecpp.c  params.c  params.h
test/: Makefile.am  tcm.c
tests/: Makefile.am  tcm.c  tecpp.c  ttwist.c
